syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.responses";
option java_multiple_files = true;

package response_models;

// common
import "common/vector2.proto";
// responses
import "responses/towers-service/protection-wall-response.proto";


message TowerResponse {
  int32 towerId = 1;
  common.Vector2 position = 2;
  repeated ProtectionWallResponse protectionWalls = 3;
  optional int32 ownerId = 4;
  optional string ownerUsername = 5;
  optional int64 lastProtectionWallModificationTimestamp_ms = 6;
  bool isUnderProtectionWallsInstallation = 7;
  bool isUnderCaptureLock = 8;
  bool isUnderAttack = 9;
};
